# parsing_eccomerce_site

./: .gitignore  README.md  main.py  main2.py  page.html  pyproject.toml
scrap_ht/: get_proxy.py  main.py  main2.py  proxy_check.py  proxy_list.txt  test_parse.py  valid_proxies.txt
