[tool.poetry]
name = "defr-html"
version = "0.1.0"
description = ""
authors = ["kylych-dev <mirbekov1kylych@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
html5lib = "^1.1"
selenium = "^4.21.0"
requests = "^2.32.2"
lxml = "^5.2.2"
requests-html = "^0.10.0"
lxml-html-clean = "^0.1.1"
undetected-chromedriver = "^3.5.5"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
